# dnyf-assignment-1

./: README.md  main.py  pyproject.toml
notebooks/: prompt_tuning.ipynb
prompts/: basic.md  chain_of_thought.md  few_shot.md
