[project]
name = "dnyf-assignment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.13",
    "pydantic>=2.10.4",
    "openai>=1.59.3",
    "pandas>=2.2.0",
    "tabulate>=0.9.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
    "dspy>=2.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
